--- a/src/main/resources/assets/style.css
+++ b/src/main/resources/assets/style.css
@@ -1,23 +1,97 @@
 
+:root {
+    --main-bg-color: #f36523;
+    --assist-blue: rgb(57, 102, 185);
+    --white-text: rgb(255, 255,255);
+}
+
 .blog-overview {
-    margin: 0px 40px;
+    display: -ms-grid;
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px; 
+    background-color: #222;
+    padding: 0 30px 30px 30px;
+}
+
+.blog-overview h2 {
+    color: var(--white-text);
+    grid-column: 1 / 4;
+    background-color: var(--main-bg-color);
+    margin: 0;
+    padding: 15px;
+    font-size: 2.5em;
+}
+
+.blog-overview .blog-post {
+    color: var(--white-text);
+    color: white;
+    background: #f36523;
+    /* border-radius: 5px; */
+    padding-bottom: 15px;
+    width: 100%;
+    min-width: auto;
+    max-width: auto;
+    box-sizing: border-box;
+    box-shadow: none;
+}
+
+.blog-overview .blog-header h3 {
+    font-size: 2em;
+}
+
+.blog-overview .blog-header img {
+    display: block;
+    border-radius: 2px;
+    width: 100%;
+    height: 120px;
+    object-fit: cover;
+    overflow: hidden;
+}
+
+.blog-overview .blog-post .blog-title {
+    padding: 0 15px;
+    margin-top: 15px;
+    margin-bottom: 0;
+}
+
+.blog-overview .blog-post .blog-subtitle {
+    font-size: 0.8em;
+    padding: 0 15px;
+}
+
+.blog-overview .blog-post .blog-content {
+    padding: 0 15px;
+}
+
+.blog-overview .blog-post .blog-link {
+    padding: 0 15px;
 }
 
 .blog-post {
-    margin: 50px 0px 50px 0px;
-    padding: 10px;
-    border: 2px solid lightgray;
+    background-color: var(--main-bg-color);
+    min-width: 300px;
+    max-width: 1000px;
+    width: 75%;
+    margin: 0 auto;
+    padding: 15px;
+    box-shadow: 2px 2px 5px 0px rgb(175, 175, 175);
+    /* font-family:  */
 }
 
-.blog-header {
+.blog-post .blog-header img {
+    width: 100%;
 }
 
-.blog-title {
-    margin: 10px 0px 0px 0px;
-}
+@media screen and (max-width: 700px) {
+    .blog-overview {
+        display: block;
+        min-width: 300px;
+    }
 
-.blog-subtitle {
-    font-size: 0.8em;
-    margin-bottom: 10px;
+    .blog-overview .blog-post {
+        margin-top: 20px;
+    }
 }
-
